# nagios-ipa-healthcheck

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
nagios_ipa_healthcheck/: __about__.py  __init__.py  __main__.py  check.py
tests/: __init__.py  example.json  test_check.py
