[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nagios-ipa-healthcheck"
dynamic = ["version"]
description = 'Nagios plugin to run ipa-healthcheck'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Benjamin Li", email = "bli@linsang.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/benjunmun/nagios-ipa-healthcheck#readme"
Issues = "https://github.com/benjunmun/nagios-ipa-healthcheck/issues"
Source = "https://github.com/benjunmun/nagios-ipa-healthcheck"

[tool.hatch.version]
path = "nagios_ipa_healthcheck/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:nagios_ipa_healthcheck tests}"

[tool.coverage.run]
source_pkgs = ["nagios_ipa_healthcheck", "tests"]
branch = true
parallel = true
omit = [
  "nagios_ipa_healthcheck/__about__.py",
]

[tool.coverage.paths]
nagios_ipa_healthcheck = ["nagios_ipa_healthcheck", "*/nagios-ipa-healthcheck/nagios_ipa_healthcheck"]
tests = ["tests", "*/nagios-ipa-healthcheck/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
